[package]
name = "audio-share"
version = "0.1.0"
authors = ["Lachlan Hogan <imlocie@gmail.com>"]
edition = "2018"

[target.'cfg(linux)'.dependencies]
gstreamer = { version = "0.14.5" }
gstreamer-app = { version = "0.14.0" }
gstreamer-audio = { version = "0.14.5" }
byte-slice-cast = { version = "0.3.3" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["combaseapi", "mmdeviceapi", "winerror", "objbase", "audioclient", "mmreg", "audiosessiontypes", "strmif", "minwindef", "unknwnbase", "ksmedia"] }
byteorder = { version = "1.3.2" }
